[MARKENG-2434b] fixed most of jump

--- a/src/components/Microsite/Header/Header.scss
+++ b/src/components/Microsite/Header/Header.scss
@@ -6,6 +6,7 @@
   border-bottom: 1px solid $grey_30;
   font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica, Arial, sans-serif !important;
   letter-spacing: normal;
+
   .activeMenu {
     background-color: $grey_00;
     position: relative;
@@ -62,7 +63,7 @@
     .navbar-nav .nav-link,
     /* Ul */
     & .navbar-nav {
-      max-height: 100px;
+      // max-height: 100px;
       margin: 0;
 
       @media (max-width: 991px) {
@@ -77,12 +78,15 @@
     & .navbar-brand {
       margin-bottom: 0;
       margin-right: 10px !important;
-
+      text-rendering: geometricprecision;
+      font-kerning: normal;
+      letter-spacing: -0.25px;
+      line-height: 1.4;
 
       /* Container */
       & .navbar-logo-container {
         width: 32px;
-        height: 30px;
+        height: 32px;
         z-index: 9999;
         position: relative;
       }
@@ -106,6 +110,8 @@
     & .nav-link {
       font-family: Inter !important;
       letter-spacing: normal;
+      text-rendering: geometricprecision;
+      font-kerning: normal;
       color: $forms-text !important;
       font-size: 14px;
       font-weight: 600;
@@ -114,6 +120,7 @@
       -o-transition: color 0.2s ease-in-out;
       -ms-transition: color 0.2s ease-in-out;
       padding: 6px 16px;
+      margin-bottom: 4px !important;
 
       &:hover {
         border-bottom: none;
@@ -365,6 +372,7 @@
 
 
   .CTAButton {
+
     // Orange Button (Sign Up / Launch Postman)
     a.button__sign-up {
       font-family: Inter !important;
@@ -455,14 +463,21 @@
   font-size: 16px !important;
   font-weight: 600;
   color: $grey_90 !important;
-  font-family: Inter !important;
+  font-family: Inter-400, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", Helvetica, Arial, sans-serif;
+  font-stretch: 100%;
+  text-rendering: geometricprecision;
+  font-kerning: normal;
+  font-feature-settings: "liga", "clig";
   background-color: $grey_00;
   padding-left: 0px !important;
 }
 
-.navbar,
-.nav-secondary {
+.navbar {
   padding: 6px 16px !important;
+}
+
+.nav-secondary {
+  padding: 4px 16px !important;
 }
 
 .navbar-v6,
